# reference-kbs

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  Rocket.toml  build.rs
.github/: auto_assign.yml
db/diesel/: db.sqlite
db/diesel/migrations/2022-08-22-100636_create_tables/: down.sql  up.sql
src/: attester.rs  lib.rs  main.rs  secrets_store.rs  sev.rs  snp.rs
tests/: secret_store.rs
vault/: README.md  create-secret.sh  start-vault.sh
